# pet_project

./: .gitignore  package-lock.json  pyproject.toml
front_react/: package-lock.json
front_react/src/: App.js  index.js
front_react/src/components/: Header.js
my_project/: pyproject.toml
my_project/accounts/: models.py
my_project/accounts/migrations/: 0001_initial.py
my_project/api/: serializers.py  urls.py  views.py
my_project/core/: settings.py  urls.py
